--- a/code/examples/example_ConsPensionModel.ipynb
+++ b/code/examples/example_ConsPensionModel.ipynb
@@ -5,12 +5,6 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-07-20T14:15:35.706811Z",
-     "iopub.status.busy": "2023-07-20T14:15:35.706811Z",
-     "iopub.status.idle": "2023-07-20T14:15:38.009273Z",
-     "shell.execute_reply": "2023-07-20T14:15:38.008271Z"
-    },
     "jupyter": {
      "outputs_hidden": false
     },
@@ -23,14 +17,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alujan\\mambaforge\\envs\\egmn-dev\\lib\\site-packages\\numba\\core\\decorators.py:262: NumbaDeprecationWarning: \u001b[1mnumba.generated_jit is deprecated. Please see the documentation at: https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-generated-jit for more information and advice on a suitable replacement.\u001b[0m\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/numba/core/decorators.py:262: NumbaDeprecationWarning: \u001b[1mnumba.generated_jit is deprecated. Please see the documentation at: https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-generated-jit for more information and advice on a suitable replacement.\u001b[0m\n",
       "  warnings.warn(msg, NumbaDeprecationWarning)\n"
      ]
     }
    ],
    "source": [
-    "from ConsPensionModel import PensionConsumerType\n",
-    "from utilities import plot_3d_func, plot_scatter_hist\n",
+    "from egmn.ConsPensionModel import PensionConsumerType\n",
+    "from egmn.utilities import plot_3d_func, plot_scatter_hist\n",
     "\n",
     "figures_path = \"../../content/figures/\""
    ]
@@ -40,12 +34,6 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-07-20T14:15:38.011781Z",
-     "iopub.status.busy": "2023-07-20T14:15:38.011781Z",
-     "iopub.status.idle": "2023-07-20T14:15:38.040334Z",
-     "shell.execute_reply": "2023-07-20T14:15:38.040334Z"
-    },
     "jupyter": {
      "outputs_hidden": false
     },
@@ -78,12 +66,6 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-07-20T14:15:38.044356Z",
-     "iopub.status.busy": "2023-07-20T14:15:38.044356Z",
-     "iopub.status.idle": "2023-07-20T14:16:22.513408Z",
-     "shell.execute_reply": "2023-07-20T14:16:22.513408Z"
-    },
     "jupyter": {
      "outputs_hidden": false
     },
@@ -91,7 +73,32 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py:232: NumbaPendingDeprecationWarning: \u001b[1m\u001b[1m\u001b[1m\u001b[1mCode using Numba extension API maybe depending on 'old_style' error-capturing, which is deprecated and will be replaced by 'new_style' in a future release. See details at https://numba.readthedocs.io/en/latest/reference/deprecation.html#deprecation-of-old-style-numba-captured-errors\n",
+      "Exception origin:\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py\", line 116, in __eval_spline\n",
+      "    kk = (order).literal_value\n",
+      "\u001b[0m\u001b[0m\u001b[0m\u001b[0m\n",
+      "  return _eval_linear(*args)\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py:232: NumbaPendingDeprecationWarning: \u001b[1m\u001b[1m\u001b[1m\u001b[1mCode using Numba extension API maybe depending on 'old_style' error-capturing, which is deprecated and will be replaced by 'new_style' in a future release. See details at https://numba.readthedocs.io/en/latest/reference/deprecation.html#deprecation-of-old-style-numba-captured-errors\n",
+      "Exception origin:\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py\", line 116, in __eval_spline\n",
+      "    kk = (order).literal_value\n",
+      "\u001b[0m\u001b[0m\u001b[0m\u001b[0m\n",
+      "  return _eval_linear(*args)\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py:232: NumbaPendingDeprecationWarning: \u001b[1m\u001b[1m\u001b[1m\u001b[1mCode using Numba extension API maybe depending on 'old_style' error-capturing, which is deprecated and will be replaced by 'new_style' in a future release. See details at https://numba.readthedocs.io/en/latest/reference/deprecation.html#deprecation-of-old-style-numba-captured-errors\n",
+      "Exception origin:\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/interpolation/splines/eval_splines.py\", line 116, in __eval_spline\n",
+      "    kk = (order).literal_value\n",
+      "\u001b[0m\u001b[0m\u001b[0m\u001b[0m\n",
+      "  return _eval_linear(*args)\n"
+     ]
+    }
+   ],
    "source": [
     "agent.solve()\n",
     "\n",
@@ -715,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
