--- a/code/examples/example_ConsRetirementModel.ipynb
+++ b/code/examples/example_ConsRetirementModel.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "execution": {
-     "iopub.execute_input": "2023-07-20T14:16:55.783365Z",
-     "iopub.status.busy": "2023-07-20T14:16:55.783365Z",
-     "iopub.status.idle": "2023-07-20T14:16:57.655221Z",
-     "shell.execute_reply": "2023-07-20T14:16:57.655221Z"
-    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -20,14 +13,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alujan\\mambaforge\\envs\\egmn-dev\\lib\\site-packages\\numba\\core\\decorators.py:262: NumbaDeprecationWarning: \u001b[1mnumba.generated_jit is deprecated. Please see the documentation at: https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-generated-jit for more information and advice on a suitable replacement.\u001b[0m\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/egmn-dev/lib/python3.10/site-packages/numba/core/decorators.py:262: NumbaDeprecationWarning: \u001b[1mnumba.generated_jit is deprecated. Please see the documentation at: https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-generated-jit for more information and advice on a suitable replacement.\u001b[0m\n",
       "  warnings.warn(msg, NumbaDeprecationWarning)\n"
      ]
     }
    ],
    "source": [
-    "from ConsRetirementModel import RetirementConsumerType\n",
-    "from utilities import plot_3d_func, plot_retired"
+    "from egmn.ConsRetirementModel import RetirementConsumerType\n",
+    "from egmn.utilities import plot_3d_func, plot_retired"
    ]
   },
   {
@@ -40,6 +33,9 @@
      "iopub.status.busy": "2023-07-20T14:16:57.658228Z",
      "iopub.status.idle": "2023-07-20T14:16:57.671228Z",
      "shell.execute_reply": "2023-07-20T14:16:57.671228Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -76,6 +72,9 @@
      "iopub.status.busy": "2023-07-20T14:16:58.963956Z",
      "iopub.status.idle": "2023-07-20T14:16:58.976954Z",
      "shell.execute_reply": "2023-07-20T14:16:58.976954Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -162,6 +161,9 @@
      "iopub.status.idle": "2023-07-20T14:16:59.413019Z",
      "shell.execute_reply": "2023-07-20T14:16:59.413019Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -193,6 +195,9 @@
      "iopub.status.idle": "2023-07-20T14:16:59.429020Z",
      "shell.execute_reply": "2023-07-20T14:16:59.429020Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -207,6 +212,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -220,6 +228,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -238,6 +249,9 @@
      "iopub.status.busy": "2023-07-20T14:16:59.432018Z",
      "iopub.status.idle": "2023-07-20T14:16:59.738563Z",
      "shell.execute_reply": "2023-07-20T14:16:59.738563Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -271,6 +285,9 @@
      "iopub.status.idle": "2023-07-20T14:17:00.079620Z",
      "shell.execute_reply": "2023-07-20T14:17:00.079620Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -303,6 +320,9 @@
      "iopub.status.idle": "2023-07-20T14:17:00.375159Z",
      "shell.execute_reply": "2023-07-20T14:17:00.375159Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -329,6 +349,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -347,6 +370,9 @@
      "iopub.status.busy": "2023-07-20T14:17:00.378160Z",
      "iopub.status.idle": "2023-07-20T14:17:00.769218Z",
      "shell.execute_reply": "2023-07-20T14:17:00.769218Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -379,6 +405,9 @@
      "iopub.status.idle": "2023-07-20T14:17:01.083771Z",
      "shell.execute_reply": "2023-07-20T14:17:01.083771Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -409,6 +438,9 @@
      "iopub.status.busy": "2023-07-20T14:17:01.086771Z",
      "iopub.status.idle": "2023-07-20T14:17:01.414316Z",
      "shell.execute_reply": "2023-07-20T14:17:01.414316Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -441,6 +473,9 @@
      "iopub.status.idle": "2023-07-20T14:17:01.729865Z",
      "shell.execute_reply": "2023-07-20T14:17:01.729865Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -466,6 +501,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -484,6 +522,9 @@
      "iopub.status.busy": "2023-07-20T14:17:01.732868Z",
      "iopub.status.idle": "2023-07-20T14:17:02.043414Z",
      "shell.execute_reply": "2023-07-20T14:17:02.043414Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -516,6 +557,9 @@
      "iopub.status.idle": "2023-07-20T14:17:02.464986Z",
      "shell.execute_reply": "2023-07-20T14:17:02.464986Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -546,6 +590,9 @@
      "iopub.status.busy": "2023-07-20T14:17:02.467988Z",
      "iopub.status.idle": "2023-07-20T14:17:02.779527Z",
      "shell.execute_reply": "2023-07-20T14:17:02.779527Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -578,6 +625,9 @@
      "iopub.status.idle": "2023-07-20T14:17:03.091075Z",
      "shell.execute_reply": "2023-07-20T14:17:03.091075Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -609,6 +659,9 @@
      "iopub.status.idle": "2023-07-20T14:17:03.419621Z",
      "shell.execute_reply": "2023-07-20T14:17:03.419621Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -634,6 +687,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -652,6 +708,9 @@
      "iopub.status.busy": "2023-07-20T14:17:03.422621Z",
      "iopub.status.idle": "2023-07-20T14:17:03.749169Z",
      "shell.execute_reply": "2023-07-20T14:17:03.748169Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -683,6 +742,9 @@
      "iopub.status.busy": "2023-07-20T14:17:03.751169Z",
      "iopub.status.idle": "2023-07-20T14:17:04.104239Z",
      "shell.execute_reply": "2023-07-20T14:17:04.104239Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -725,6 +787,9 @@
      "iopub.status.idle": "2023-07-20T14:17:04.528309Z",
      "shell.execute_reply": "2023-07-20T14:17:04.528309Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -758,6 +823,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -776,6 +844,9 @@
      "iopub.status.busy": "2023-07-20T14:17:04.531310Z",
      "iopub.status.idle": "2023-07-20T14:17:04.872412Z",
      "shell.execute_reply": "2023-07-20T14:17:04.871409Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -808,6 +879,9 @@
      "iopub.status.idle": "2023-07-20T14:17:05.217958Z",
      "shell.execute_reply": "2023-07-20T14:17:05.217958Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -838,6 +912,9 @@
      "iopub.status.busy": "2023-07-20T14:17:05.220962Z",
      "iopub.status.idle": "2023-07-20T14:17:05.610020Z",
      "shell.execute_reply": "2023-07-20T14:17:05.610020Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -870,6 +947,9 @@
      "iopub.status.idle": "2023-07-20T14:17:05.923572Z",
      "shell.execute_reply": "2023-07-20T14:17:05.923572Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -900,6 +980,9 @@
      "iopub.status.busy": "2023-07-20T14:17:05.926570Z",
      "iopub.status.idle": "2023-07-20T14:17:06.331633Z",
      "shell.execute_reply": "2023-07-20T14:17:06.331633Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -932,6 +1015,9 @@
      "iopub.status.idle": "2023-07-20T14:17:06.661701Z",
      "shell.execute_reply": "2023-07-20T14:17:06.661701Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -963,6 +1049,9 @@
      "iopub.status.idle": "2023-07-20T14:17:06.990263Z",
      "shell.execute_reply": "2023-07-20T14:17:06.990263Z"
     },
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -988,6 +1077,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -1004,6 +1096,9 @@
      "iopub.status.busy": "2023-07-20T14:17:06.993264Z",
      "iopub.status.idle": "2023-07-20T14:17:08.273276Z",
      "shell.execute_reply": "2023-07-20T14:17:08.273276Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -1038,7 +1133,7 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "egmn-dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1052,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
@@ -1061,5 +1156,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
