--- a/code/examples/example_ConsPensionModel_baseline_interact.ipynb
+++ b/code/examples/example_ConsPensionModel_baseline_interact.ipynb
@@ -64,7 +64,8 @@
     "baseline_params[\"bMax\"] = 14\n",
     "baseline_params[\"bNestFac\"] = -1\n",
     "\n",
-    "baseline_params[\"cycles\"] = 3"
+    "max_cycles = 5\n",
+    "baseline_params[\"cycles\"] = max_cycles"
    ]
   },
   {
@@ -131,18 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a645057102e444d38e51b12e8832bf60",
+       "model_id": "a7f37e987c224e8c825d374bed759f2a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(IntSlider(value=1, description='Cycles:', max=10, min=1), IntSlider(value=0, des…"
+       "VBox(children=(VBox(children=(Label(value='Interactive Controls'), IntSlider(value=0, description='Cycle (t):'…"
       ]
      },
      "metadata": {},
@@ -151,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab9476f1c309404fa952fe62b12d62d6",
+       "model_id": "5906f985843d483e9ec8e639d7522386",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,359 +165,134 @@
     }
    ],
    "source": [
-    "import ipywidgets as widgets\n",
+    "#| label: conspension\n",
+    "import ipywidgets as w\n",
     "from ipywidgets import VBox, HBox\n",
+    "import numpy as np\n",
     "\n",
-    "debug = widgets.Output()\n",
-    "with debug:\n",
-    "    print(\"debug output:\")\n",
+    "debug = w.Output()\n",
     "\n",
     "state = dict(cycles=-1)\n",
-    "plt.ioff()\n",
     "\n",
-    "def plot(cycles, t, plottype):\n",
+    "# plt.ioff()\n",
+    "# fig = plt.figure()\n",
+    "# ax=fig.add_subplot(1,1,1, projection=\"3d\")\n",
+    "\n",
+    "lookup = {\n",
+    "    'Consumption Value Function (VF)': lambda a, t: a.solution[t].consumption_stage.v_func.vFuncNvrs,\n",
+    "    'Consumption VF Derivative L':  lambda a, t: a.solution[t].consumption_stage.dvdl_func.cFunc,\n",
+    "    'Consumption VF Derivative B':  lambda a, t: a.solution[t].consumption_stage.dvdb_func.cFunc,\n",
+    "    'Deposit Amount': lambda a, t: a.solution[t].deposit_stage.d_func,\n",
+    "    'Deposit Stage Consumption': lambda a, t : a.solution[t].deposit_stage.c_func,\n",
+    "    'Deposit Stage Value Function (VF)': lambda a, t : a.solution[t].deposit_stage.v_func.vFuncNvrs,\n",
+    "    'Deposit Stage VF Derivative M': lambda a,t: a.solution[t].deposit_stage.dvdm_func.cFunc,\n",
+    "    'Deposit Stage VF Derivative N': lambda a,t: a.solution[t].deposit_stage.dvdn_func.cFunc\n",
+    "}\n",
+    "\n",
+    "options = list(lookup.keys())\n",
+    "\n",
+    "w_count = w.IntSlider(50, min=10, max=100, description=\"Count:\")\n",
+    "w_nestfac = w.IntSlider(-1, min=-5, max=5, description=\"NestFac:\")\n",
+    "w_cycles = w.IntSlider(max_cycles, min=1, max=20, description=\"Cycles:\")\n",
+    "w_mMax = w.IntSlider(10, min=1, max=30, description=\"mMax:\")\n",
+    "w_nMax = w.IntSlider(12, min=1, max=30, description=\"nMax:\")\n",
+    "w_lMax = w.IntSlider(9, min=1, max=30, description=\"lMax:\")\n",
+    "w_blMax = w.IntSlider(13, min=1, max=30, description=\"blMax:\")\n",
+    "w_aMax = w.IntSlider(8, min=1, max=30, description=\"aMax:\")\n",
+    "w_bMax = w.IntSlider(14, min=1, max=30, description=\"bMax:\")\n",
+    "out_readout = w.Output()\n",
+    "\n",
+    "w_t = w.IntSlider(0, min=0, max=max_cycles-1, description=\"Cycle (t):\")\n",
+    "w_plottype = w.Dropdown(options=options, value=options[0], description=\"Plot Type:\")\n",
+    "w_plottype.layout.width = '400px'\n",
+    "w_solve = w.Button(description='Solve')\n",
+    "w_elev = w.IntSlider(20, min=0, max=85, description=\"Elevation:\")\n",
+    "w_azim = w.IntSlider(245, min=0, max=360, description=\"Azimuth:\")\n",
+    "\n",
+    "def plot(cycles, t, plottype, elev, azim):\n",
     "    global agent\n",
     "    with debug:\n",
-    "        print(cycles, t, plottype)\n",
     "        params = dict(**baseline_params)\n",
-    "        params.pop(\"cycles\")\n",
-    "        if state['cycles'] > -1 and state['cycles'] != cycles: \n",
-    "            agent = PensionConsumerType(**params, cycles=cycles)\n",
-    "            with warnings.catch_warnings():\n",
-    "                agent.solve()\n",
-    "            state['cycles'] = cycles\n",
-    "            \n",
-    "        with warnings.catch_warnings():\n",
-    "            plot_3d_func(agent.solution[t].post_decision_stage.v_func.vFuncNvrs, [0, 5], [0, 5])\n",
+    "        fig = plt.figure(figsize=(6,6))\n",
+    "        ax = plt.axes(projection=\"3d\")\n",
+    "        ax.view_init(elev=elev, azim=azim)\n",
+    "        ax.tick_params(axis='both', labelsize=8) \n",
+    "        plot_3d_func(lookup[plottype](agent, t), [0, 5], [0, 5], \n",
+    "                     meta={\n",
+    "                         \"title\": \"Cons Pension Model\", \n",
+    "                         \"xlabel\": \"Retirement balance $n$\", \n",
+    "                         \"ylabel\":\"Market Resources $m$\", \n",
+    "                         \"zlabel\": \"Pension Deposits $d$\"},\n",
+    "                     ax=ax, show=False)\n",
+    "        \n",
+    "        \n",
+    "    with out_readout:\n",
+    "        out_readout.clear_output(wait=True)\n",
     "\n",
-    "        plt.show()\n",
+    "baseline_ctrl = VBox([\n",
+    "    w.Label(\"Baseline Settings (press 'solve' to apply)\"),\n",
+    "    HBox([\n",
+    "    VBox([w_count, w_mMax, w_lMax, w_aMax, w_cycles]),\n",
+    "    VBox([w_nestfac, w_nMax, w_blMax, w_bMax,HBox([w_solve, out_readout])]),\n",
+    "])])\n",
     "\n",
-    "w_cycles = widgets.IntSlider(1, min=1, max=10, description=\"Cycles:\")\n",
-    "w_t = widgets.IntSlider(0, min=0, max=3, description=\"T:\")\n",
-    "w_plottype = widgets.Dropdown(options=['a','b','c'], value='a', description=\"Plot Type:\")\n",
-    "controls = VBox([w_cycles, w_t, w_plottype])\n",
     "\n",
-    "e_out = widgets.interactive_output(plot, dict(cycles=w_cycles, t=w_t, plottype=w_plottype))\n",
+    "def do_solve(_):\n",
+    "    global baseline_params\n",
+    "    global max_cycles\n",
+    "    global agent\n",
+    "    with out_readout:\n",
+    "        out_readout.clear_output(wait=True)\n",
+    "        print('solving...')\n",
+    "\n",
+    "    with debug:\n",
+    "        baseline_params[\"mCount\"] = w_count.value\n",
+    "        baseline_params[\"mMax\"] = 10\n",
+    "        baseline_params[\"mNestFac\"] = -1\n",
+    "        \n",
+    "        baseline_params[\"nCount\"] = w_count.value\n",
+    "        baseline_params[\"nMax\"] = 12\n",
+    "        baseline_params[\"nNestFac\"] = -1\n",
+    "        \n",
+    "        baseline_params[\"lCount\"] = w_count.value\n",
+    "        baseline_params[\"lMax\"] = 9\n",
+    "        baseline_params[\"lNestFac\"] = -1\n",
+    "        \n",
+    "        baseline_params[\"blCount\"] = w_count.value\n",
+    "        baseline_params[\"blMax\"] = 13\n",
+    "        baseline_params[\"blNestFac\"] = -1\n",
+    "        \n",
+    "        baseline_params[\"aCount\"] = w_count.value\n",
+    "        baseline_params[\"aMax\"] = 8\n",
+    "        baseline_params[\"aNestFac\"] = -1\n",
+    "        \n",
+    "        baseline_params[\"bCount\"] = w_count.value\n",
+    "        baseline_params[\"bMax\"] = 14\n",
+    "        baseline_params[\"bNestFac\"] = -1\n",
+    "    \n",
+    "        max_cycles = w_cycles.value\n",
+    "        baseline_params[\"cycles\"] = max_cycles\n",
+    "    \n",
+    "        agent = PensionConsumerType(**baseline_params)\n",
+    "        agent.solve()\n",
+    "\n",
+    "        plot(cycles=w_cycles.value, t=w_t.value, plottype=w_plottype.value)\n",
+    "        \n",
+    "    with out_readout:\n",
+    "        out_readout.clear_output(wait=True)\n",
+    "\n",
+    "w_solve.on_click(do_solve)\n",
+    "\n",
+    "interactive_ctrl = VBox([w.Label(\"Interactive Controls\"),w_t, w_plottype, HBox([w_elev, w_azim])])\n",
+    "\n",
+    "e_out = w.interactive_output(plot, dict(cycles=w_cycles, t=w_t, plottype=w_plottype, elev=w_elev, azim=w_azim))\n",
     "plots = HBox([e_out])\n",
     "\n",
-    "ui = VBox([controls, plots])\n",
+    "# TODO get baseline controls working\n",
+    "# ui = VBox([baseline_ctrl, interactive_ctrl, plots])\n",
+    "ui = VBox([interactive_ctrl, plots])\n",
     "display(ui)\n",
     "display(debug)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Post Decision Stage\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with warnings.catch_warnings():\n",
-    "    plot_3d_func(agent.solution[2].post_decision_stage.v_func.vFuncNvrs, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].post_decision_stage.dvda_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].post_decision_stage.dvdb_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Consumption Stage\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].consumption_stage.c_func, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].consumption_stage.v_func.vFuncNvrs, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].consumption_stage.dvdl_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].consumption_stage.dvdb_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Deposit Stage\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].deposit_stage.d_func, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].deposit_stage.c_func, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].deposit_stage.v_func.vFuncNvrs, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].deposit_stage.dvdm_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_3d_func(agent.solution[T].deposit_stage.dvdn_func.cFunc, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%time\n",
-    "plot_3d_func(agent.solution[T].deposit_stage.gaussian_interp, [0, 5], [0, 5])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "## Grids\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grids = agent.solution[T].consumption_stage.grids_before_cleanup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_scatter_hist(\n",
-    "    grids[\"lMat\"],\n",
-    "    grids[\"blMat\"],\n",
-    "    grids[\"dMat\"],\n",
-    "    \"Pension Deposit on Exogenous Grid\",\n",
-    "    r\"Market Resources $\\ell$\",\n",
-    "    \"Retirement balance $b$\",\n",
-    "    \"PensionExogenousGrid\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_scatter_hist(\n",
-    "    grids[\"mMat\"],\n",
-    "    grids[\"nMat\"],\n",
-    "    grids[\"dMat\"],\n",
-    "    \"Pension Deposit on Endogenous Grid\",\n",
-    "    \"Market Resources $m$\",\n",
-    "    \"Retirement balance $n$\",\n",
-    "    \"PensionEndogenousGrid\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_scatter_hist(\n",
-    "    agent.solution[T].deposit_stage.gaussian_interp.grids[0],\n",
-    "    agent.solution[T].deposit_stage.gaussian_interp.grids[1],\n",
-    "    agent.solution[T].deposit_stage.gaussian_interp.values,\n",
-    "    \"Pension Deposit on Endogenous Grid\",\n",
-    "    \"Market Resources $m$\",\n",
-    "    \"Retirement balance $n$\",\n",
-    "    \"2ndStagePensionEndogenousGrid\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "plot = ax.scatter(\n",
-    "    grids[\"mMat\"],\n",
-    "    grids[\"nMat\"],\n",
-    "    c=grids[\"dMat\"],\n",
-    "    cmap=\"viridis\",\n",
-    "    vmin=-1,\n",
-    "    vmax=5,\n",
-    "    plotnonfinite=True,\n",
-    "    alpha=0.6,\n",
-    "    s=5,\n",
-    ")\n",
-    "cbar = fig.colorbar(plot)\n",
-    "cbar.ax.set_ylabel(\"Pension Deposits $d$\")\n",
-    "\n",
-    "plt.xlim([-1, 10])\n",
-    "plt.ylim([-1, 10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "scatter = ax.scatter(\n",
-    "    grids[\"lMat\"],\n",
-    "    grids[\"blMat\"],\n",
-    "    # c=np.maximum(grids[\"dMat\"], 0),\n",
-    "    # cmap=\"viridis\",\n",
-    "    vmin=-2,\n",
-    "    vmax=15,\n",
-    "    plotnonfinite=True,\n",
-    "    alpha=0.6,\n",
-    "    s=5,\n",
-    ")\n",
-    "# cbar = fig.colorbar(scatter)\n",
-    "# cbar.ax.set_ylabel(\"Pension Deposits $d$\")\n",
-    "\n",
-    "plt.title(\"Pension Deposits on Exogenous Post-Decision Grid\")\n",
-    "plt.xlabel(r\"Liquid Wealth $\\ell$\")\n",
-    "plt.ylabel(\"Retirement Balance $b$\")\n",
-    "fig.savefig(figures_path + \"SparsePensionExogenousGrid.svg\")\n",
-    "fig.savefig(figures_path + \"SparsePensionExogenousGrid.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grids = agent.solution[T].consumption_stage.grids_before_cleanup"
    ]
   },
   {
@@ -525,31 +301,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gauss_interp = GeneralizedRegressionUnstructuredInterp(\n",
-    "    grids[\"dMat\"],\n",
-    "    [grids[\"mMat\"], grids[\"nMat\"]],\n",
-    "    model=\"gaussian-process\",\n",
-    "    std=True,\n",
-    "    model_kwargs={\"normalize_y\": True},\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get_ipython().run_line_magic(\"matplotlib\", \"widget\")\n",
-    "plot_3d_func(gauss_interp, [0, 5], [0, 5])"
-   ]
   },
   {
    "cell_type": "code",
